# photopea_app

./: CMakeLists.txt  LICENSE  README.md  build.sh  com.github.vikdevelop.photopea_app.desktop  install.py  install.sh  package-lock.json  package.json  photopea  photopea.cpp  photopea.desktop  photopea.py  run.py
.github/workflows/: main.yml
data/: com.github.vikdevelop.photopea_app.metainfo.xml
src/: main.js
src/main/: main.js
